Re-jigged Metadata input form to run with a validator, currently not much in there, but it should display any errors in the correct place as they are put in the validator.

--- a/importer.ui/src/main/resources/messages.properties
+++ b/importer.ui/src/main/resources/messages.properties
@@ -3,3 +3,4 @@ organisationName.exists=Organisation Name already exists
 contactEmail.invalid=E-Mail address is not valid
 phone.invalid=Phone number is not valid
 postcode.invalid=Postcode is not a valid UK postcode
+title.empty=Metadata Title required
