Addressed the issues brought up by Graham with the UI, should have no default selected for radio buttons and greys out invalid radio buttons so the user can't make a bad choice (handled with validation as well but gives a smoother user experience in this case), also cleared out a couple of other small issues that he had

--- a/importer.ui/src/main/resources/messages.properties
+++ b/importer.ui/src/main/resources/messages.properties
@@ -17,5 +17,8 @@ summary.required=Organisation Summary field is mandatory
 title.empty=Metadata Title field is mandatory
 website.invalid=Website is invalid
 datasetAdminEmail.notFound=Could not find the dataset administrator, ensure the user with this email actually exists!
+geographicalRes.required=Please select a resolution
+recorderNames.required=Please select an option
+recordAtts.required=Please select an option
 record.geoResFull=Must have a value if Public Geographic Resolution is set to 'Full'
 record.geoResNotFull=Cannot be set to 'Yes' if Public Geographic Resolution is not set to 'Full'
