--- a/importer.ui/src/main/resources/messages.properties
+++ b/importer.ui/src/main/resources/messages.properties
@@ -22,3 +22,4 @@ recorderNames.required=Please select an option
 recordAtts.required=Please select an option
 record.geoResFull=Must have a value if Public Geographic Resolution is set to 'Full'
 record.geoResNotFull=Cannot be set to 'Yes' if Public Geographic Resolution is not set to 'Full'
+organisationID.required=Please select an organisation
